2017-01-31  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r211305. rdar://problem/29320059

    2017-01-27  Simon Fraser  <simon.fraser@apple.com>

            Element with a backdrop-filter and a mask may not correctly mask the backdrop
            https://bugs.webkit.org/show_bug.cgi?id=167456
            rdar://problem/29320059

            Reviewed by Antoine Quint.

            * css3/filters/backdrop/backdrop-filter-uneven-corner-radii-expected.html: Added.
            * css3/filters/backdrop/backdrop-filter-uneven-corner-radii.html: Added.

2017-01-31  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r211249. rdar://problem/29539389

    2017-01-26  Jeremy Jones  <jeremyj@apple.com>

            Page should be able to request pointer lock without user gesture if it relinquished it without a user gesture
            https://bugs.webkit.org/show_bug.cgi?id=167126

            Reviewed by Jon Lee.

            Enable pointer-lock/locked-element-removed-from-dom.html for WK2 by enabling for Mac and disabling for WK1.
            Not enable in WK1 becuase of https://bugs.webkit.org/show_bug.cgi?id=167127

            * platform/mac-wk1/TestExpectations:
            * platform/mac/TestExpectations:

2017-01-26  Matthew Hanson  <matthew_hanson@apple.com>

        Merge r211235. rdar://problem/30058933

    2017-01-26  Jeremy Jones  <jeremyj@apple.com>

            Pointer lock events should be delivered directly to the target element
            https://bugs.webkit.org/show_bug.cgi?id=167134

            Reviewed by Jon Lee.

            The pointer-lock/mouse-event-delivery.html test is modified to explicitly move the mouse pointer to a valid
            location before sending mouse actions. Without this, the test infrastructure doesn't know that the pointer
            is over the web view and doesn't deliver events.

            Added code to test for wheel events.

            * platform/mac/TestExpectations: enabled test.